--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-Flask
-Flask-SQLAlchemy
-PyMySQL
-pandas
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+Werkzeug==2.3.7
+pandas==2.2.2
+openpyxl==3.1.2
+xlrd==2.0.1
+SQLAlchemy==2.0.20
+PyMySQL==1.1.0
+python-dotenv==1.0.0
